# twitter-clone

backend/: Dockerfile  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json
